// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CatalogItemFooter Chapter (adaptive) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      color={4294967295}
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={26}
      vbWidth={26}
      width={15}
    >
      <RNSVGGroup>
        <RNSVGPath
          clipRule={0}
          d="M13 26C5.8 26 0 20.2 0 13S5.8 0 13 0s13 5.8 13 13-5.8 13-13 13zm6.2-16.8c.1-.1.2-.3.3-.5.1-.5-.4-1-.9-.9-.2 0-.4.1-.5.3l-.7.7c-.9-.7-2-1.1-3.2-1.3v-.6h.6c.4 0 .8-.3.9-.7 0-.5-.3-.9-.8-.9h-3c-.4 0-.8.3-.9.7 0 .5.3.9.8.9h.7v.6c-1.1.1-2.1.5-3 1.2-.8.6.1 1.9 1 1.3 1.5-1 3.4-1.2 5-.4 1.6.8 2.7 2.3 2.8 4 .1 1.7-.9 3.4-2.4 4.2-1.6.9-3.5.8-5-.1-.4-.2-.8-.2-1.1.2-.3.4-.2.9.2 1.2 1.3.8 2.9 1.1 4.5.9 3.2-.5 5.5-3.1 5.6-6.2 0-1.4-.5-2.8-1.3-3.9l.4-.7zm-4.6 4.3l1.5-1.8c.4-.5-.3-1.1-.7-.7l-1.9 1.4c-.6-.1-1.1.2-1.4.7-.3.5-.2 1.1.2 1.5.4.4 1 .5 1.5.2.6-.2.9-.8.8-1.3zm-3.9 2.6c0-.4-.3-.6-.7-.6H7.2c-.9 0-.9 1.3 0 1.3H10c.4 0 .7-.3.7-.7zm-.7-2.9H6.1c-.9 0-.9 1.3 0 1.3H10c.9 0 .9-1.3 0-1.3zm0-1c.9 0 .9-1.3 0-1.3H4.8c-.9 0-.9 1.3 0 1.3H10z"
          fill={4294967295}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      color={4294967295}
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={46}
      vbWidth={46}
      width={15}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
          fill={4294967295}
          fillRule={1}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Chapter card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 12,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={13.200000000000001}
      bbWidth={13.200000000000001}
      color={4294967295}
      focusable={false}
      height={13.200000000000001}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={13.200000000000001}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "0%",
          }
        }
        testID="progression-bar-0"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Chapter (cover) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={22}
      bbWidth={22}
      color={4294967295}
      focusable={false}
      height={22}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 22,
            "width": 22,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={26}
      vbWidth={26}
      width={22}
    >
      <RNSVGGroup>
        <RNSVGPath
          clipRule={0}
          d="M13 26C5.8 26 0 20.2 0 13S5.8 0 13 0s13 5.8 13 13-5.8 13-13 13zm6.2-16.8c.1-.1.2-.3.3-.5.1-.5-.4-1-.9-.9-.2 0-.4.1-.5.3l-.7.7c-.9-.7-2-1.1-3.2-1.3v-.6h.6c.4 0 .8-.3.9-.7 0-.5-.3-.9-.8-.9h-3c-.4 0-.8.3-.9.7 0 .5.3.9.8.9h.7v.6c-1.1.1-2.1.5-3 1.2-.8.6.1 1.9 1 1.3 1.5-1 3.4-1.2 5-.4 1.6.8 2.7 2.3 2.8 4 .1 1.7-.9 3.4-2.4 4.2-1.6.9-3.5.8-5-.1-.4-.2-.8-.2-1.1.2-.3.4-.2.9.2 1.2 1.3.8 2.9 1.1 4.5.9 3.2-.5 5.5-3.1 5.6-6.2 0-1.4-.5-2.8-1.3-3.9l.4-.7zm-4.6 4.3l1.5-1.8c.4-.5-.3-1.1-.7-.7l-1.9 1.4c-.6-.1-1.1.2-1.4.7-.3.5-.2 1.1.2 1.5.4.4 1 .5 1.5.2.6-.2.9-.8.8-1.3zm-3.9 2.6c0-.4-.3-.6-.7-.6H7.2c-.9 0-.9 1.3 0 1.3H10c.4 0 .7-.3.7-.7zm-.7-2.9H6.1c-.9 0-.9 1.3 0 1.3H10c.9 0 .9-1.3 0-1.3zm0-1c.9 0 .9-1.3 0-1.3H4.8c-.9 0-.9 1.3 0 1.3H10z"
          fill={4294967295}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 22,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Chapter card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 15,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16.5}
      bbWidth={16.5}
      color={4294967295}
      focusable={false}
      height={16.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={16.5}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "80%",
          }
        }
        testID="progression-bar-0.8"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Chapter (hero) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 28,
          },
          Object {
            "textAlign": "center",
          },
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Chapter card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 15,
            },
            Object {
              "textAlign": "center",
            },
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        Object {
          "alignSelf": "center",
          "width": "60%",
        },
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1.5,
            "borderTopRightRadius": 1.5,
            "height": 3,
            "width": "80%",
          }
        }
        testID="progression-bar-0.8"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Chapter (without author) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      color={4294967295}
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={26}
      vbWidth={26}
      width={15}
    >
      <RNSVGGroup>
        <RNSVGPath
          clipRule={0}
          d="M13 26C5.8 26 0 20.2 0 13S5.8 0 13 0s13 5.8 13 13-5.8 13-13 13zm6.2-16.8c.1-.1.2-.3.3-.5.1-.5-.4-1-.9-.9-.2 0-.4.1-.5.3l-.7.7c-.9-.7-2-1.1-3.2-1.3v-.6h.6c.4 0 .8-.3.9-.7 0-.5-.3-.9-.8-.9h-3c-.4 0-.8.3-.9.7 0 .5.3.9.8.9h.7v.6c-1.1.1-2.1.5-3 1.2-.8.6.1 1.9 1 1.3 1.5-1 3.4-1.2 5-.4 1.6.8 2.7 2.3 2.8 4 .1 1.7-.9 3.4-2.4 4.2-1.6.9-3.5.8-5-.1-.4-.2-.8-.2-1.1.2-.3.4-.2.9.2 1.2 1.3.8 2.9 1.1 4.5.9 3.2-.5 5.5-3.1 5.6-6.2 0-1.4-.5-2.8-1.3-3.9l.4-.7zm-4.6 4.3l1.5-1.8c.4-.5-.3-1.1-.7-.7l-1.9 1.4c-.6-.1-1.1.2-1.4.7-.3.5-.2 1.1.2 1.5.4.4 1 .5 1.5.2.6-.2.9-.8.8-1.3zm-3.9 2.6c0-.4-.3-.6-.7-.6H7.2c-.9 0-.9 1.3 0 1.3H10c.4 0 .7-.3.7-.7zm-.7-2.9H6.1c-.9 0-.9 1.3 0 1.3H10c.9 0 .9-1.3 0-1.3zm0-1c.9 0 .9-1.3 0-1.3H4.8c-.9 0-.9 1.3 0 1.3H10z"
          fill={4294967295}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Chapter card
  </Text>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "80%",
          }
        }
        testID="progression-bar-0.8"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Chapter 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      color={4294967295}
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={26}
      vbWidth={26}
      width={15}
    >
      <RNSVGGroup>
        <RNSVGPath
          clipRule={0}
          d="M13 26C5.8 26 0 20.2 0 13S5.8 0 13 0s13 5.8 13 13-5.8 13-13 13zm6.2-16.8c.1-.1.2-.3.3-.5.1-.5-.4-1-.9-.9-.2 0-.4.1-.5.3l-.7.7c-.9-.7-2-1.1-3.2-1.3v-.6h.6c.4 0 .8-.3.9-.7 0-.5-.3-.9-.8-.9h-3c-.4 0-.8.3-.9.7 0 .5.3.9.8.9h.7v.6c-1.1.1-2.1.5-3 1.2-.8.6.1 1.9 1 1.3 1.5-1 3.4-1.2 5-.4 1.6.8 2.7 2.3 2.8 4 .1 1.7-.9 3.4-2.4 4.2-1.6.9-3.5.8-5-.1-.4-.2-.8-.2-1.1.2-.3.4-.2.9.2 1.2 1.3.8 2.9 1.1 4.5.9 3.2-.5 5.5-3.1 5.6-6.2 0-1.4-.5-2.8-1.3-3.9l.4-.7zm-4.6 4.3l1.5-1.8c.4-.5-.3-1.1-.7-.7l-1.9 1.4c-.6-.1-1.1.2-1.4.7-.3.5-.2 1.1.2 1.5.4.4 1 .5 1.5.2.6-.2.9-.8.8-1.3zm-3.9 2.6c0-.4-.3-.6-.7-.6H7.2c-.9 0-.9 1.3 0 1.3H10c.4 0 .7-.3.7-.7zm-.7-2.9H6.1c-.9 0-.9 1.3 0 1.3H10c.9 0 .9-1.3 0-1.3zm0-1c.9 0 .9-1.3 0-1.3H4.8c-.9 0-.9 1.3 0 1.3H10z"
          fill={4294967295}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Chapter card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 12,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={13.200000000000001}
      bbWidth={13.200000000000001}
      color={4294967295}
      focusable={false}
      height={13.200000000000001}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={13.200000000000001}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "80%",
          }
        }
        testID="progression-bar-0.8"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Default (hero) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer-placeholder"
>
  <View
    style={
      Array [
        Array [
          Object {
            "height": 75,
          },
          Object {
            "height": 87,
          },
        ],
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "85%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 16,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "65%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 16,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            Object {
              "alignItems": "center",
            },
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "50%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 5,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "alignSelf": "center",
              "width": "60%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "justifyContent": "center",
              },
              Object {
                "alignItems": "center",
              },
              Object {
                "height": undefined,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#efefef",
                  "borderRadius": 3,
                  "height": 12,
                  "marginBottom": 0,
                  "width": "100%",
                },
                Array [
                  Object {
                    "borderRadius": 0,
                  },
                  Object {
                    "height": 2,
                  },
                  Object {
                    "backgroundColor": "#CFD8DC",
                  },
                ],
                Object {
                  "overflow": "hidden",
                },
              ]
            }
          >
            <View
              style={null}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer-placeholder"
>
  <View
    style={
      Array [
        Array [
          Object {
            "height": 75,
          },
          false,
        ],
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            false,
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "65%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 10,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 8,
            "width": 8,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            false,
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "90%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 10,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "justifyContent": "center",
            },
            false,
            Object {
              "height": undefined,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 3,
                "height": 12,
                "marginBottom": 0,
                "width": "50%",
              },
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 5,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ],
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={null}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            false,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "justifyContent": "center",
              },
              false,
              Object {
                "height": undefined,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#efefef",
                  "borderRadius": 3,
                  "height": 12,
                  "marginBottom": 0,
                  "width": "100%",
                },
                Array [
                  Object {
                    "borderRadius": 0,
                  },
                  Object {
                    "height": 2,
                  },
                  Object {
                    "backgroundColor": "#CFD8DC",
                  },
                ],
                Object {
                  "overflow": "hidden",
                },
              ]
            }
          >
            <View
              style={null}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Discipline (adaptive) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={15}
      bbWidth={15}
      color={4294967295}
      focusable={false}
      height={15}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 15,
            "width": 15,
          },
        ]
      }
      testID="infinite-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={46}
      vbWidth={46}
      width={15}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M10.6 15.3h2.5V11l9.2 6.4-9.2 6.5v-4.4h-2.8-.1c-3.3.2-5.8 2.9-5.8 6.1 0 3.5 2.5 6.1 5.9 6.1 3.9 0 7.1-3.4 9.8-6.1l2.8-2.8c3.5-3.5 7.2-7.4 12.8-7.4 5.9 0 10 4.3 10 10.3 0 5.5-4.4 10.3-10.5 10.3-2.8 0-5.2-1.2-7.3-2.8-.1-.1-.3-.2-.4-.3-.4-.4-.6-.9-.6-1.4 0-1.1.9-2 2-2 .4 0 .8.1 1.1.3.1 0 .1.1.2.1 1.5 1.1 3.1 1.9 5 1.9 3.5 0 6.1-2.8 6.1-6.1 0-3.5-2.5-6.1-5.9-6.1-3.9 0-7.1 3.4-9.8 6.1l-2.8 2.8c-3.5 3.5-7.2 7.4-12.8 7.4-5.8 0-10-4.3-10-10.3 0-2.6 1-5 2.7-6.9 1-1.1 2.2-1.9 3.6-2.5.1 0 .1-.1.2-.1 1.1-.5 2.4-.7 3.7-.8h.4z"
          fill={4294967295}
          fillRule={1}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Discipline card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 12,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={13.200000000000001}
      bbWidth={13.200000000000001}
      color={4294967295}
      focusable={false}
      height={13.200000000000001}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={13.200000000000001}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "0%",
          }
        }
        testID="progression-bar-0"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Discipline (cover) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 22,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Discipline card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 15,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16.5}
      bbWidth={16.5}
      color={4294967295}
      focusable={false}
      height={16.5}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={16.5}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "30%",
          }
        }
        testID="progression-bar-0.3"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Discipline (hero) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 28,
          },
          Object {
            "textAlign": "center",
          },
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Discipline card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 15,
            },
            Object {
              "textAlign": "center",
            },
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        Object {
          "alignSelf": "center",
          "width": "60%",
        },
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1.5,
            "borderTopRightRadius": 1.5,
            "height": 3,
            "width": "30%",
          }
        }
        testID="progression-bar-0.3"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Discipline (without author) 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Discipline card
  </Text>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "30%",
          }
        }
        testID="progression-bar-0.3"
      />
    </View>
  </View>
</View>
`;

exports[`Storyshots CatalogItemFooter Discipline 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "flex-end",
    }
  }
  testID="catalog-item-footer"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Text
    style={
      Array [
        Object {},
        Array [
          Object {
            "color": "#FFFFFF",
            "fontWeight": "700",
          },
          Object {
            "fontSize": 15,
          },
          false,
        ],
      ]
    }
    testID="title-catalog-item-footer"
  >
    Discipline card
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {},
          Array [
            Object {
              "color": "#FFFFFF",
              "flex": 1,
              "fontWeight": "400",
            },
            Object {
              "fontSize": 12,
            },
            false,
          ],
        ]
      }
      testID="subtitle-catalog-item-footer"
    >
      A good guy with blue eyes
    </Text>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={13.200000000000001}
      bbWidth={13.200000000000001}
      color={4294967295}
      focusable={false}
      height={13.200000000000001}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      testID="certified-catalog-item-footer"
      tintColor={4294967295}
      vbHeight={24}
      vbWidth={24}
      width={13.200000000000001}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 .001h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M12.042 2c-5.523 0-10 4.477-10 10s4.477 10 10 10 10-4.477 10-10-4.478-10-10-10zm-.75 15.75l-5-3.75 1.5-2 3 2.25 5.25-7 2 1.5-6.75 9z"
          fill={4294967295}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        },
        false,
      ]
    }
    testID="progress-bar-catalog-item-footer"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
        }
      }
      testID="progression-bar"
    >
      <View
        style={
          Object {
            "backgroundColor": "#3EC483",
            "borderBottomRightRadius": 1,
            "borderTopRightRadius": 1,
            "height": 2,
            "width": "30%",
          }
        }
        testID="progression-bar-0.3"
      />
    </View>
  </View>
</View>
`;
